# tuah

./: .rustfmt.toml  Cargo.toml  Makefile
containers/composes/: dc.dev.yml
containers/images/: Dockerfile  Dockerfile.turn
server/: Cargo.toml
server/src/: error.rs  main.rs
server/src/handlers/: mod.rs  stream.rs
server/src/webrtc/: mod.rs
src/: app.rs  capture.rs  connection.rs  main.rs
tuah-desktop/: Cargo.toml
tuah-desktop/src/: capture.rs  signaling.rs
tuah-desktop/src/gui/: mod.rs
tuah-server/: Cargo.toml  Dockerfile
tuah-server/src/: config.rs  error.rs  lib.rs  main.rs  room.rs  routes.rs
tuah-server/src/entities/: message.rs  mod.rs  room.rs
tuah-server/src/handlers/: mod.rs  room.rs  stream.rs
tuah-server/src/routes/: mod.rs  room.rs  stream.rs
tuah-server/src/services/: mod.rs
tuah-server/src/services/room/: mod.rs
tuah-server/src/types/: mod.rs  room.rs
tuah-server/src/types/chat/: hub.rs  mod.rs
