[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["ws"] }
clap = { version = "4.5.31", features = ["derive"] }
dotenv = "0.15.0"
serde = "1.0.218"
serde_derive = "1.0.218"
tokio = { version = "1.4", features = ["full"] }
tokio-tungstenite = "0.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4"] }
webrtc = "0.12.0"
