[package]
name = "tuah-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
dotenv = "0.15.0"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.4", features = ["full"] }
tokio-tungstenite = "0.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
webrtc = "0.12.0"
futures = "0.3.31"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
redis = { version = "0.29.1", features = ["tokio-comp"] }
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
sea-orm = "1.1.7"
